[gd_scene load_steps=4 format=3 uid="uid://c7521eme06u5v"]

[ext_resource type="Script" path="res://Scripts/UI/world_ui.gd" id="1_kic0v"]
[ext_resource type="Shortcut" uid="uid://fuvss5hfg4q2" path="res://Resources/Shortcuts/go_back.tres" id="2_nfb7t"]
[ext_resource type="PackedScene" uid="uid://dm3oqhffhprfy" path="res://Scenes/UI/CityUI.tscn" id="3_nvhgh"]

[node name="WorldUi" type="CanvasLayer"]
script = ExtResource("1_kic0v")

[node name="Menu" type="Button" parent="."]
offset_left = 20.0
offset_top = 30.0
offset_right = 138.0
offset_bottom = 93.0
scale = Vector2(2.04, 2.04)
shortcut = ExtResource("2_nfb7t")
text = "Menu"

[node name="End Turn" type="Button" parent="."]
offset_left = 1510.0
offset_top = 893.0
offset_right = 1683.0
offset_bottom = 956.0
scale = Vector2(2.04, 2.04)
text = "End turn"

[node name="Players" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -274.0
offset_top = 18.0
offset_right = -16.0
offset_bottom = 498.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Players"]
layout_mode = 2
text = "Players:"
horizontal_alignment = 2

[node name="Button" type="Button" parent="Players"]
layout_mode = 2
text = "Player1"

[node name="Button2" type="Button" parent="Players"]
layout_mode = 2
text = "Player2"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 987.0
offset_top = 25.0
offset_right = 1315.0
offset_bottom = 80.0

[node name="GoodsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0 ü™ì| 0 ‚õèÔ∏è| 0 üíé"

[node name="CityUi" parent="." instance=ExtResource("3_nvhgh")]

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="End Turn" to="." method="_on_end_turn_pressed"]
